Use toUnmodifiableSet and toList instead of collectingAndThen
As Spring Framework 6 uses JDK17 for its baseline, we can make use of
toList() and toUnmodifiableSet() which introduced in JDK 16 and JDK 10
respectively.